precompiles/utils/macro/tests/precompile/compile-fail/evm-data/arg-dont-impl-evmdata.stderr
error[E0277]: the trait bound `String: EvmData` is not satisfied
   --> tests/precompile/compile-fail/evm-data/arg-dont-impl-evmdata.rs:26:43
    |
26  |     fn foo(test: &mut impl PrecompileHandle, arg: String) -> EvmResult {
    |                                              ^^^ the trait `EvmData` is not implemented for `String`
    |
    = help: the following other types implement trait `EvmData`:
              ()
              (TupleElement0, TupleElement1)
              (TupleElement0, TupleElement1, TupleElement2)
              (TupleElement0, TupleElement1, TupleElement2, TupleElement3)
              (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4)
              (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4, TupleElement5)
              (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4, TupleElement5, TupleElement6)
              (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4, TupleElement5, TupleElement6, TupleElement7)
            and 27 others
note: required by a bound in `EvmDataReader::<'a>::read`
   --> $WORKSPACE/precompiles/utils/src/data/mod.rs
    |
    |     pub fn read<T: EvmData>(&mut self) -> MayRevert<T> {
    |                    ^^^^^^^ required by this bound in `EvmDataReader::<'a>::read`

error[E0277]: the trait bound `String: EvmData` is not satisfied
   --> tests/precompile/compile-fail/evm-data/arg-dont-impl-evmdata.rs:26:43
    |
26  |     fn foo(test: &mut impl PrecompileHandle, arg: String) -> EvmResult {
    |                                              ^^^ the trait `EvmData` is not implemented for `String`
    |
    = help: the following other types implement trait `EvmData`:
              ()
              (TupleElement0, TupleElement1)
              (TupleElement0, TupleElement1, TupleElement2)
              (TupleElement0, TupleElement1, TupleElement2, TupleElement3)
              (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4)
              (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4, TupleElement5)
              (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4, TupleElement5, TupleElement6)
              (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4, TupleElement5, TupleElement6, TupleElement7)
            and 27 others
note: required by a bound in `EvmDataWriter::write`
   --> $WORKSPACE/precompiles/utils/src/data/mod.rs
    |
    |     pub fn write<T: EvmData>(mut self, value: T) -> Self {
    |                     ^^^^^^^ required by this bound in `EvmDataWriter::write`

error[E0277]: the trait bound `String: EvmData` is not satisfied
  --> tests/precompile/compile-fail/evm-data/arg-dont-impl-evmdata.rs:26:5
   |
26 |     fn foo(test: &mut impl PrecompileHandle, arg: String) -> EvmResult {
   |        ^^^ the trait `EvmData` is not implemented for `String`
   |
   = help: the following other types implement trait `EvmData`:
             ()
             (TupleElement0, TupleElement1)
             (TupleElement0, TupleElement1, TupleElement2)
             (TupleElement0, TupleElement1, TupleElement2, TupleElement3)
             (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4)
             (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4, TupleElement5)
             (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4, TupleElement5, TupleElement6)
             (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4, TupleElement5, TupleElement6, TupleElement7)
           and 27 others
   = note: required because of the requirements on the impl of `EvmData` for `(String,)`
